testdata/grammars/bad/unterminated_terminal_1.grammar
# This grammar is missing a closing ` for the terminal ')'

S : `(` S `) S | e
